5.0.0 -> 5.1a1:
    - jbj: add rpmmtree (from mtree(8) in OpenBSD).
    - jbj; revert the unhelpful & pugly __attribute__((__unused__)) UNUSED() macro.
    - jbj: add -Wno-missing-field-initializers -Wno-unused-parameter to stop spew.
    - jbj: QNX: retrofit u_int32_t typedef where needed.
    - jbj: add random arch name feelgood fluffiness (#432496).
    - jbj: prepare for Fedorable dependency loops (#437041).
    - rse: upgraded from GNU libtool 1.5.x to 2.2
    - jbj: rpmtar: use (if built) rpmtar feeble tests in "make check".
    - jbj: rpmtar: splint annotations.
    - jbj: rpmtar: nuke ttar.c/tdeb.c prototypes for rpmtar.
    - jbj: rpmtar: abuse --format {ar,cpio,tar,ustar} as a selector for now.
    - jbj: rpmtar: lash in -z/-j/-y/-Z compression options using popt.
    - jbj: rpmtar: add stoopid file suffix detector for gzip/bzip2/lzma detect.
    - jbj: rpmtar: abandon rpmtar -cvf for now, noop tar_mode_c().
    - jbj: rpmtar: move getdate.y lib -> rpmio for rpmtar linkage.
    - jbj: mark write padding for possible refactoring to common code.
    - jbj: ar: verify archive magic.
    - jbj: ar: arSetup is only needed when creating archives. read EOF is wonky.
    - jbj: verify that cpio/tar payloads can be created and installed.
    - jbj: psm: fix: adding ar payloads broke install payload detection.
    - jbj: use _IOSMRC macro to ensure read/write rc are handled consistently.
    - jbj: make sure cpio/tar/ar are as similar as possible.
    - jbj: keep tar.c parallel to ar.c coding conventions. cpio.c next.
    - jbj: clean up most rpmio gcc -W warnings.
    - jbj: clean up iosm/fsm gcc -W warnings.
    - jbj: enable gcc -W warnings, fix most of the no-brainers.
    - jbj: iosm: init file contexts during setup, not with missing dirs.
    - jbj: iosm: add iosm->{nofdigests,nofcontexts} to avoid rpmts access.
    - jbj: iosm: increase rdbuf/wrbuf size to 128K.
    - jbj: iosm: better fix: use fi->isSource. use IOSM_MAP_{UID,GID} not yet...