@@ -38,10 +38,10 @@
 .Dt MTREE 8
 .Os
 .Sh NAME
-.Nm mtree
+.Nm rpmmtree
 .Nd map a directory hierarchy
 .Sh SYNOPSIS
-.Nm mtree
+.Nm rpmmtree
 .Op Fl cdeilnqrUux
 .Op Fl f Ar spec
 .Op Fl K Ar keywords
@@ -50,7 +50,7 @@
 .Op Fl s Ar seed
 .Sh DESCRIPTION
 The utility
-.Nm mtree
+.Nm rpmmtree
 compares the file hierarchy rooted in the current directory against a
 specification read from the standard input.
 Messages are written to the standard output for any files whose
@@ -286,7 +286,7 @@ mark
 are ignored.
 .Pp
 The
-.Nm mtree
+.Nm rpmmtree
 utility exits with a status of 0 on success, 1 if any error occurred,
 and 2 if the file hierarchy did not match the specification.
 A status of 2 is converted to a status of 0 if the
@@ -297,7 +297,7 @@ To detect system binaries that have been
 .Dq trojan horsed ,
 it is recommended
 that
-.Nm mtree
+.Nm rpmmtree
 .Fl K
 .Cm sha1digest
 be run on the file systems, and a copy of the results stored on a different
@@ -347,3 +347,13 @@ The
 .Nm mtree
 utility appeared in
 .Bx 4.3 Reno .
+The
+.Nm rpmmtree
+port is based on the OpenBSD
+.Nm mtree-2.7
+version, using
+.Nm popt
+for option processing, and
+.Nm rpmio
+for digests and remote transport.
+
